<?xml version="1.0"?>
<package>
  <name>iiwa_robotiq_commander</name>
  <version>0.0.0</version>
  <description>The iiwa_robotiq_commander package</description>

  <maintainer email="mcorsaro@cs.brown.edu">Matt Corsaro</maintainer>

  <license>BSD</license>
  
  <build_depend>iiwa_robotiq_moveit_config</build_depend>
  
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
