<?xml version="1.0"?>
<package>
  <name>iiwa_robotiq_gazebo</name>
  <version>1.4.0</version>
  <description>This package allows to load a KUKA LBR IIWA robot with Robotiq 3-finger gripper onto Gazebo</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>iiwa_robotiq_description</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>
